Added metadata logging and data sending to db mechanism to the workflow

--- a/data_pipeline/data_pipeline.ipynb
+++ b/data_pipeline/data_pipeline.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T21:53:16.973860Z",
-     "start_time": "2024-11-24T21:53:16.964234Z"
+     "end_time": "2024-11-28T00:44:54.529837Z",
+     "start_time": "2024-11-28T00:44:54.524907Z"
     }
    },
    "outputs": [],
@@ -19,23 +19,26 @@
     "import sqlalchemy as _sql\n",
     "import sqlalchemy.ext.declarative as _declarative\n",
     "import sqlalchemy.orm as _orm\n",
+    "from soupsieve.util import lower\n",
+    "from sqlalchemy import create_engine\n",
     "import re\n",
     "from rapidfuzz.fuzz import ratio, partial_ratio\n",
     "from rapidfuzz.distance import JaroWinkler, Levenshtein\n",
     "from rapidfuzz.process import extractOne\n",
     "from fuzzywuzzy import fuzz\n",
     "from jellyfish import soundex\n",
-    "import itertools"
+    "import itertools\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "ee1714062381b142",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T21:53:17.574834Z",
-     "start_time": "2024-11-24T21:53:17.570397Z"
+     "end_time": "2024-11-28T00:44:56.459716Z",
+     "start_time": "2024-11-28T00:44:56.455974Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -66,12 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "72ff911ffa3eec9b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T21:53:18.554653Z",
-     "start_time": "2024-11-24T21:53:18.551120Z"
+     "end_time": "2024-11-28T00:44:56.950713Z",
+     "start_time": "2024-11-28T00:44:56.946128Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -95,6 +98,174 @@
     "        \"\"\"\n",
     "        self.data = pd.read_csv(self.path)\n",
     "        return self.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c49c2bffe63d8712",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-28T00:44:57.490746Z",
+     "start_time": "2024-11-28T00:44:57.484718Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class WorkflowLogger:\n",
+    "    def __init__(self, workflow_id, db_connection_string):\n",
+    "        \"\"\"\n",
+    "        Initialize the logger for tracking workflow steps.\n",
+    "        :param workflow_id: ID of the workflow this logger is associated with.\n",
+    "        :param db_connection_string: Connection string for the database.\n",
+    "        \"\"\"\n",
+    "        self.workflow_id = workflow_id\n",
+    "        self.db_engine = create_engine(db_connection_string)\n",
+    "\n",
+    "    def fetch_raw_data(self, table_name):\n",
+    "        \"\"\"\n",
+    "        Fetch raw data from a given table.\n",
+    "        :param table_name: Name of the raw data table to fetch data from.\n",
+    "        :return: pandas DataFrame containing the raw data.\n",
+    "        \"\"\"\n",
+    "        query = f\"SELECT file_content FROM {table_name};\"\n",
+    "        with self.db_engine.connect() as conn:\n",
+    "            return pd.read_sql(query, conn)\n",
+    "\n",
+    "    def log_step(self, step_name, step_type, parameters, data, previous_id=None):\n",
+    "        \"\"\"\n",
+    "        Log the details of a step in the workflow.\n",
+    "        :param step_name: Name of the step (e.g., 'Preprocessing', 'Blocking').\n",
+    "        :param step_type: Type of the step (e.g., 'preprocessing', 'blocking').\n",
+    "        :param parameters: Dictionary of parameters used in the step.\n",
+    "        :param data: The pandas DataFrame processed in this step.\n",
+    "        :param previous_id: ID of the previous step in this workflow (if any).\n",
+    "        :return: ID of the logged step.\n",
+    "        \"\"\"\n",
+    "        data_json = data.to_json(orient=\"records\")\n",
+    "\n",
+    "        # Deactivate the current step for the same step_type\n",
+    "        deactivate_query = \"\"\"\n",
+    "        UPDATE workflow_steps\n",
+    "        SET currently_in_use = FALSE, valid_to = NOW()\n",
+    "        WHERE workflow_id = %s AND step_type = %s AND currently_in_use = TRUE;\n",
+    "        \"\"\"\n",
+    "        with self.db_engine.connect() as conn:\n",
+    "            conn.execute(deactivate_query, (self.workflow_id, step_type))\n",
+    "\n",
+    "        # Insert the new step\n",
+    "        insert_query = \"\"\"\n",
+    "        INSERT INTO workflow_steps (\n",
+    "            name, step_type, parameters, data, workflow_id, previous_id, currently_in_use\n",
+    "        ) VALUES (%s, %s, %s, %s, %s, %s, TRUE)\n",
+    "        RETURNING id;\n",
+    "        \"\"\"\n",
+    "        with self.db_engine.connect() as conn:\n",
+    "            result = conn.execute(\n",
+    "                insert_query,\n",
+    "                (step_name, step_type, json.dumps(parameters), data_json, self.workflow_id, previous_id)\n",
+    "            )\n",
+    "            return result.fetchone()[0]\n",
+    "\n",
+    "    def fetch_latest_step(self, step_type):\n",
+    "        \"\"\"\n",
+    "        Fetch the latest data and parameters for a given step type.\n",
+    "        :param step_type: The type of step to fetch (e.g., 'preprocessing', 'blocking').\n",
+    "        :return: Tuple (step_id, parameters, data DataFrame) of the latest step.\n",
+    "        \"\"\"\n",
+    "        query = \"\"\"\n",
+    "        SELECT id, parameters, data\n",
+    "        FROM workflow_steps\n",
+    "        WHERE workflow_id = %s AND step_type = %s AND currently_in_use = TRUE;\n",
+    "        \"\"\"\n",
+    "        with self.db_engine.connect() as conn:\n",
+    "            result = conn.execute(query, (self.workflow_id, step_type)).fetchone()\n",
+    "            if result:\n",
+    "                step_id, parameters, data_json = result\n",
+    "                parameters = json.loads(parameters)\n",
+    "                data = pd.read_json(data_json)\n",
+    "                return step_id, parameters, data\n",
+    "            return None, None, None\n",
+    "\n",
+    "    def fetch_step_by_id(self, step_id):\n",
+    "        \"\"\"\n",
+    "        Fetch data and parameters for a specific step by ID.\n",
+    "        :param step_id: ID of the step to fetch.\n",
+    "        :return: Tuple (parameters, data DataFrame) of the step.\n",
+    "        \"\"\"\n",
+    "        query = \"\"\"\n",
+    "        SELECT parameters, data\n",
+    "        FROM workflow_steps\n",
+    "        WHERE id = %s;\n",
+    "        \"\"\"\n",
+    "        with self.db_engine.connect() as conn:\n",
+    "            result = conn.execute(query, (step_id,)).fetchone()\n",
+    "            if result:\n",
+    "                parameters, data_json = result\n",
+    "                parameters = json.loads(parameters)\n",
+    "                data = pd.read_json(data_json)\n",
+    "                return parameters, data\n",
+    "            return None, None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e48c8373bb94dd96",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-28T00:44:58.222856Z",
+     "start_time": "2024-11-28T00:44:58.122979Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file_content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [file_content]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Initialize the logger\n",
+    "logger = WorkflowLogger(workflow_id=1, db_connection_string=\"postgresql+psycopg2://db_user:password@db:5432/inzynierka_db\")\n",
+    "\n",
+    "# Fetch raw data from the database\n",
+    "source_data = logger.fetch_raw_data(\"workflows\")\n",
+    "source_data.head()"
    ]
   },
   {
@@ -592,10 +763,20 @@
    ],
    "source": [
     "preprocessor = DataPreprocessing(source_data)\n",
-    "\n",
-    "preprocessor.select_columns(columns=['all'])\n",
-    "preprocessor.apply_preprocessing(lowercase=True, diacritics_removal=True, punctuation_removal=True)\n",
+    "columns=['all']\n",
+    "lowercase=True \n",
+    "diacritics_removal=True\n",
+    "punctuation_removal=True\n",
+    "preprocessor.select_columns(columns=columns)\n",
+    "preprocessor.apply_preprocessing(lowercase=lowercase, diacritics_removal=diacritics_removal, punctuation_removal=punctuation_removal)\n",
     "preprocessed_data = preprocessor.get_processed_data()\n",
+    "# Log preprocessing step\n",
+    "preprocessing_id = logger.log_step(\n",
+    "    step_name=\"Preprocessing\",\n",
+    "    step_type=\"preprocessing\",\n",
+    "    parameters={\"columns\": columns, \"lowercase\": lowercase, \"diacritics_removal\": diacritics_removal, \"punctuation_removal\": punctuation_removal},\n",
+    "    data=preprocessed_data\n",
+    ")\n",
     "preprocessed_data"
    ]
   },
@@ -872,9 +1053,20 @@
     }
    ],
    "source": [
-    "block_builder = BlockBuilding(preprocessed_data, method='standard_blocking')\n",
-    "block_builder.build_blocks(columns=['city', 'cuisine'])\n",
-    "block_builder.get_blocks()\n",
+    "prev_id, _, preprocessed_data = logger.fetch_latest_step(\"preprocessing\")\n",
+    "method='standard_blocking'\n",
+    "columns=['city', 'cuisine']\n",
+    "block_builder = BlockBuilding(preprocessed_data, method=method)\n",
+    "block_builder.build_blocks(columns=columns)\n",
+    "all_blocks = block_builder.get_blocks()\n",
+    "# Log blocking step\n",
+    "blocking_id = logger.log_step(\n",
+    "    step_name=\"Blocking\",\n",
+    "    step_type=\"blocking\",\n",
+    "    parameters={\"method\": method, \"columns\": columns},\n",
+    "    data=all_blocks,\n",
+    "    previous_id=prev_id\n",
+    ")\n",
     "block_builder.display_block(100)"
    ]
   },
@@ -1690,6 +1882,8 @@
     }
    ],
    "source": [
+    "prev_id, _, all_blocks = logger.fetch_latest_step(\"blocking\")\n",
+    "\n",
     "comparison = Comparison(all_blocks)\n",
     "\n",
     "# name\taddress\tcity\tcuisine\n",
@@ -1701,12 +1895,21 @@
     "}\n",
     "\n",
     "# Compare within blocks\n",
-    "result = comparison.compare_within_blocks(\n",
+    "comparison_results = comparison.compare_within_blocks(\n",
     "    block_col=\"block_id\",\n",
     "    column_algorithms=column_algorithms\n",
     ")\n",
     "\n",
-    "result\n",
+    "# Log comparison step\n",
+    "comparison_id = logger.log_step(\n",
+    "    step_name=\"Comparison\",\n",
+    "    step_type=\"comparison\",\n",
+    "    parameters={\"block_col\": \"block_id\", \"column_algorithms\": column_algorithms},\n",
+    "    data=comparison_results,\n",
+    "    previous_id=prev_id\n",
+    ")\n",
+    "\n",
+    "comparison_results\n",
     "\n"
    ]
   },
@@ -2159,11 +2362,31 @@
     }
    ],
    "source": [
-    "classifier = Classifier(all_blocks, result)\n",
+    "classifier = Classifier(all_blocks, comparison_results)\n",
+    "method = 'threshold_based'\n",
+    "possible_match = False\n",
+    "# thresholds = {'not_match': 0.6, 'match': 0.75}\n",
+    "thresholds = {'match': 0.75}\n",
+    "\n",
+    "# not_match = 0.4\n",
     "classified_results = classifier.classify_matches(\n",
     "    method='threshold_based',\n",
-    "    thresholds={'not_match': 0.6, 'match': 0.75}\n",
+    "    thresholds=thresholds,\n",
+    "    possible_match=possible_match\n",
     ")\n",
+    "\n",
+    "# Log the classification step\n",
+    "classification_id = logger.log_step(\n",
+    "    step_name=\"Classification\",\n",
+    "    step_type=\"classification\",\n",
+    "    parameters={\n",
+    "        \"method\": method,\n",
+    "        \"thresholds\": thresholds,\n",
+    "        \"possible_match\": possible_match\n",
+    "    },\n",
+    "    data=classified_results\n",
+    ")\n",
+    "\n",
     "classified_results[classified_results['classification'] == 'Match']"
    ]
   },
