Added functions for returning json to load it to db as jsonb

--- a/data_pipeline/data_pipeline.ipynb
+++ b/data_pipeline/data_pipeline.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-07T16:35:57.414033Z",
-     "start_time": "2024-12-07T16:35:57.408980Z"
+     "end_time": "2024-12-07T16:51:02.663707Z",
+     "start_time": "2024-12-07T16:51:02.167112Z"
     }
    },
    "outputs": [],
@@ -46,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 4,
    "id": "72ff911ffa3eec9b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-07T16:35:57.427084Z",
-     "start_time": "2024-12-07T16:35:57.423262Z"
+     "end_time": "2024-12-07T16:51:03.412754Z",
+     "start_time": "2024-12-07T16:51:03.407907Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -81,12 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 5,
    "id": "a81a1a3e51ac6a86",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-07T16:35:57.450002Z",
-     "start_time": "2024-12-07T16:35:57.441989Z"
+     "end_time": "2024-12-07T16:51:03.978726Z",
+     "start_time": "2024-12-07T16:51:03.958116Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -246,7 +246,7 @@
        "[864 rows x 5 columns]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,12 +277,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 8,
    "id": "7953afe00343280",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-07T16:35:57.479991Z",
-     "start_time": "2024-12-07T16:35:57.474622Z"
+     "end_time": "2024-12-07T16:51:16.412915Z",
+     "start_time": "2024-12-07T16:51:16.398960Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -422,17 +422,28 @@
     "        Return the preprocessed data.\n",
     "        :return: Preprocessed pandas DataFrame.\n",
     "        \"\"\"\n",
-    "        return self.processed_data\n"
+    "        return self.processed_data\n",
+    "    \n",
+    "    \n",
+    "    def dataframe_to_jsonb(self):\n",
+    "        \"\"\"\n",
+    "        Convert a DataFrame to a JSONB-compatible string.\n",
+    "        :param dataframe: pandas DataFrame\n",
+    "        :return: JSON string\n",
+    "        \"\"\"\n",
+    "        # Convert the DataFrame to a JSON string\n",
+    "        json_data = self.processed_data.to_json(orient='records', date_format='iso')\n",
+    "        return json.loads(json_data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 11,
    "id": "35ae2a845eb8545c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-07T16:35:57.513160Z",
-     "start_time": "2024-12-07T16:35:57.501642Z"
+     "end_time": "2024-12-07T16:51:53.984505Z",
+     "start_time": "2024-12-07T16:51:53.963709Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -592,7 +603,7 @@
        "[858 rows x 5 columns]"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +617,8 @@
     "preprocessor.select_columns(columns=columns)\n",
     "preprocessor.apply_preprocessing(lowercase=lowercase, diacritics_removal=diacritics_removal, punctuation_removal=punctuation_removal)\n",
     "preprocessed_data = preprocessor.get_processed_data()\n",
-    "preprocessed_data"
+    "preprocessed_data\n",
+    "# preprocessor.dataframe_to_jsonb()"
    ]
   },
   {
@@ -628,12 +640,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 12,
    "id": "6cab97e8478f7555",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-07T16:35:57.551001Z",
-     "start_time": "2024-12-07T16:35:57.542783Z"
+     "end_time": "2024-12-07T16:52:22.436362Z",
+     "start_time": "2024-12-07T16:52:22.421560Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -828,7 +840,17 @@
     "        if self.blocks is None:\n",
     "            raise ValueError(\"No blocks have been generated. Run block building first.\")\n",
     "\n",
-    "        return self.blocks"
+    "        return self.blocks\n",
+    "    \n",
+    "    def dataframe_to_jsonb(self):\n",
+    "        \"\"\"\n",
+    "        Convert a DataFrame to a JSONB-compatible string.\n",
+    "        :param dataframe: pandas DataFrame\n",
+    "        :return: JSON string\n",
+    "        \"\"\"\n",
+    "        # Convert the DataFrame to a JSON string\n",
+    "        json_data = self.blocks.to_json(orient='records', date_format='iso')\n",
+    "        return json.loads(json_data)"
    ]
   },
   {
@@ -1476,12 +1498,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 13,
    "id": "5d941c21a7e037b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-07T16:35:57.725237Z",
-     "start_time": "2024-12-07T16:35:57.719159Z"
+     "end_time": "2024-12-07T16:52:39.981914Z",
+     "start_time": "2024-12-07T16:52:39.971131Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -1603,7 +1625,17 @@
     "        Get the parameters used for the comparison methods.\n",
     "        :return: Dictionary of methods and their parameters.\n",
     "        \"\"\"\n",
-    "        return self.parameters\n"
+    "        return self.parameters\n",
+    "    \n",
+    "    def dataframe_to_jsonb(self):\n",
+    "        \"\"\"\n",
+    "        Convert a DataFrame to a JSONB-compatible string.\n",
+    "        :param dataframe: pandas DataFrame\n",
+    "        :return: JSON string\n",
+    "        \"\"\"\n",
+    "        # Convert the DataFrame to a JSON string\n",
+    "        json_data = self.comparison_results.to_json(orient='records', date_format='iso')\n",
+    "        return json.loads(json_data)\n"
    ]
   },
   {
@@ -1830,12 +1862,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 14,
    "id": "90e37a9a-f866-4bbd-9645-f6dbf9949f55",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-07T16:35:57.845011Z",
-     "start_time": "2024-12-07T16:35:57.836806Z"
+     "end_time": "2024-12-07T16:52:57.562004Z",
+     "start_time": "2024-12-07T16:52:57.546417Z"
     }
    },
    "outputs": [],
@@ -2002,7 +2034,17 @@
     "        Get the parameters used for the classification method.\n",
     "        :return: Dictionary of parameters.\n",
     "        \"\"\"\n",
-    "        return self.parameters\n"
+    "        return self.parameters\n",
+    "    \n",
+    "    def dataframe_to_jsonb(self):\n",
+    "        \"\"\"\n",
+    "        Convert a DataFrame to a JSONB-compatible string.\n",
+    "        :param dataframe: pandas DataFrame\n",
+    "        :return: JSON string\n",
+    "        \"\"\"\n",
+    "        # Convert the DataFrame to a JSON string\n",
+    "        json_data = self.classification_results.to_json(orient='records', date_format='iso')\n",
+    "        return json.loads(json_data)\n"
    ]
   },
   {
